--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,68 +1,71 @@
-name = "fadtech2" # todo
+name = "fadtech3" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "fadtech2.ngapaktunnelling.xyz"
+pattern = "fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "ava.game.naver.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "blog.webex.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "www.sushiroll.co.id.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "blog.sushiroll.co.id.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "cdn.appsflyer.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "investor.fb.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "investor.spotify.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "investor.spotify.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.joox.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "www.joox.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "quiz.staging.vidio.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "zoomcares.zoom.us.fadtech2.ngapaktunnelling.xyz"
+pattern = "zoomcares.zoom.us.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "graph.facebook.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "graph.facebook.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.help.tinder.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "www.help.tinder.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "poe.garena.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "poe.garena.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "games.axis.co.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "games.axis.co.id.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "api.ovo.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "api.ovo.id.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "h.facebook.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "h.facebook.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "104.26.6.171.fadtech2.ngapaktunnelling.xyz"
+pattern = "104.26.6.171.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "app.gopay.co.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "app.gopay.co.id.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "go.appsflyer.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "go.appsflyer.com.fadtech3.ngapaktunnelling.xyz"
+custom_domain = true
+[[routes]]
+pattern = "devsupport.webex.com.fadtech3.ngapaktunnelling.xyz"
 custom_domain = true
 
 [vars]
