--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sgp" # todo
+name = "sg-oracle" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgp.vip-server.cloud"
+pattern = "sg-oracle.vip-server.cloud"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.sgp.vip-server.cloud"
+pattern = "quiz.staging.vidio.com.sg-oracle.vip-server.cloud"
 custom_domain = true
 [[routes]]
-pattern = "api.webex.com.sgp.vip-server.cloud"
+pattern = "quiz.int.vidio.com.sg-oracle.vip-server.cloud"
 custom_domain = true
 [[routes]]
-pattern = "Carrier.webex.com.sgp.vip-server.cloud"
+pattern = "img.email1.vidio.com.sg-oracle.vip-server.cloud"
 custom_domain = true
 [[routes]]
-pattern = "Partner.zoom.us.sgp.vip-server.cloud"
+pattern = "nontontv.vidio.com.sg-oracle.vip-server.cloud"
 custom_domain = true
 
 [vars]
