--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,11 @@
-name = "test" # todo
+name = "aofeisg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "test.hashoino.filegear-sg.me"
+pattern = "sga.kenshivpn.my.id"
 custom_domain = true
 
 
