--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,20 +1,26 @@
-name = "sgbt" # todo
+name = "jp" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgbt.bjhonstore.my.id"
+pattern = "jp.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.sgbt.bjhonstore.my.id"
+pattern = "help.viu.com.jp.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sgbt.bjhonstore.my.id"
+pattern = "ava.game.naver.com.jp.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.sgbt.bjhonstore.my.id"
+pattern = "quiz.int.vidio.com.jp.bjhonstore.my.id"
+custom_domain = true
+[[routes]]
+pattern = "api.instagram.com.jp.noyszfourfect.xyz"
+custom_domain = true
+[[routes]]
+pattern = "cache.netflix.com.jp.bjhonstore.my.id"
 custom_domain = true
 
 [vars]
