--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,24 @@
-name = "cf-worker-ws-dev" # todo
+name = "jp" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[routes]]
+pattern = "jp.noyszfourfect.xyz"
+custom_domain = true
+[[routes]]
+pattern = "help.viu.com.jp.noyszfourfect.xyz"
+custom_domain = true
+[routes]]
+pattern = "quiz.int.vidio.com.jp.noyszfourfect.xyz"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.jp.noyszfourfect.xyz"
+custom_domain = true
+[[routes]]
+pattern = "api.instagram.com.jp.noyszfourfect.xyz"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
