--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ name = "jp" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
-[routes]]
+[[routes]]
 pattern = "jp.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
