--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,6 +13,9 @@ custom_domain = true
 [[routes]]
 pattern = "ava.game.naver.com.jp.noyszfourfect.xyz"
 custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.jp.noyszfourfect.xyz"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
