--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,88 +1,138 @@
-name = "fadtech2" # todo
+name = "boostr" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "fadtech2.ngapaktunnelling.xyz"
+pattern = "boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "ava.game.naver.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "blog.webex.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "www.sushiroll.co.id.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "blog.sushiroll.co.id.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "cdn.appsflyer.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "investor.fb.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "investors.spotify.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "investors.spotify.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.joox.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "www.joox.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "quiz.staging.vidio.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "zoomcares.zoom.us.fadtech2.ngapaktunnelling.xyz"
+pattern = "zoomcares.zoom.us.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "graph.facebook.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "graph.facebook.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.help.tinder.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "www.help.tinder.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "poe.garena.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "poe.garena.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "games.axis.co.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "games.axis.co.id.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "api.ovo.id.fadtech2.ngapaktunnelling.xyz"
+pattern = "api.ovo.id.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "cdnodeb.visionplus.fadtech2.ngapaktunnelling.xyz"
+pattern = "cdnodeb.visionplus.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "104.26.6.171.fadtech2.ngapaktunnelling.xyz"
+pattern = "104.26.6.171.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "app.gopay.co.id.fadtech3.ngapaktunnelling.xyz"
+pattern = "app.gopay.co.id.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "go.appsflyer.com.fadtech3.ngapaktunnelling.xyz"
+pattern = "go.appsflyer.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "devsupport.webex.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "devsupport.webex.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "edu.ruangguru.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "edu.ruangguru.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "fadz.ngapaktunnelling.xyz.fadtech2.ngapaktunnelling.xyz"
+pattern = "fadz.ngapaktunnelling.xyz.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "creativeservices.netflix.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "creativeservices.netflix.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "npca.netflix.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "npca.netflix.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "gw.ruangguru.com.fadtech2.ngapaktunnelling.xyz"
+pattern = "gw.ruangguru.com.boostr.fadzvpnproject.xyz"
 custom_domain = true
-
+[[routes]]
+pattern = "edu.udemy.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.16.51.111.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "z-p4.www.instagram.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "web.poe.garena.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "static.cdninstagram.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "dl.cvs.freefiremobile.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.17.74.206.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.17.3.81.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "sogood.linefriends.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.18.29.141.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "layanan.ruangguru.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.16.51.111.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "help.pornhub.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "io.ruangguru.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "graph.instagram.com.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "162.159.130.11.boostr.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "162.159.138.6.boostr.fadzvpnproject.xyz"
+custom_domain = true
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
 # PROXYIP = "1.2.3.4"
@@ -90,4 +140,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "4819b8b0-6a33-4c6c-8d33-c0947ecbe803"
+UUID = "b3bf7776-0451-4ab1-afb6-0f21ef63ddc2"
