--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,20 +1,20 @@
-name = "sg" # todo
+name = "jp" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg.noyszfourfect.xyz"
+pattern = "jp.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.sg.noyszfourfect.xyz"
+pattern = "help.viu.com.jp.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sg.noyszfourfect.xyz"
+pattern = "ava.game.naver.com.jp.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.sg.noyszfourfect.xyz"
+pattern = "quiz.int.vidio.com.jp.noyszfourfect.xyz"
 custom_domain = true
 
 [vars]
