--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,14 @@
-name = "idgooglellc" # todo
+name = "sgdigitalocean" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "idg.kenshivpn.my.id"
+pattern = "sgdo.kenshivpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.sgdo.kenshivpn.my.id"
 custom_domain = true
 
 
