--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,14 @@
-name = "sgovh" # todo
+name = "sgamazon" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgovh.reinzvpn.my.id"
+pattern = "sgam.reinzvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.sgam.reinzvpn.my.id"
 custom_domain = true
 
 [vars]
