--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,20 +1,20 @@
-name = "jp" # todo
+name = "sg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "jp.noyszfourfect.xyz"
+pattern = "sg.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.jp.noyszfourfect.xyz"
+pattern = "help.viu.com.sg.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.jp.noyszfourfect.xyz"
+pattern = "ava.game.naver.com.sg.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.jp.noyszfourfect.xyz"
+pattern = "quiz.int.vidio.com.sg.noyszfourfect.xyz"
 custom_domain = true
 
 [vars]
@@ -24,4 +24,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "c2cadcfe-d79b-4947-b451-29505cae9083"
