--- a/wrangler.toml
+++ b/wrangler.toml
@@ -16,6 +16,9 @@ custom_domain = true
 [[routes]]
 pattern = "quiz.int.vidio.com.sg.noyszfourfect.xyz"
 custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.sg.noyszfourfect.xyz"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
