--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,97 @@
-name = "cf-worker-ws-dev" # todo
+name = "ID" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "mssdk24-normal-useast2a.tiktokv.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "app.genflix.co.id.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "investor.fb.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "b.ns.fbcdn.com.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "zaintest.vuclip.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cache.netflix.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "graph.instagram.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "s.youtube.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "investors.spotify.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "m.pubgmobile.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "img.mobilelegends.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "web.poe.garena.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "dl.cvs.freefiremobile.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "alt-520054260191.s.youtube.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "imgcache.joox.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "applink.joox.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "img.email1.vidio.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "blog.webex.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cdn.appsflayer.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "apac-marketing.tiktok.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "artists.tiktok.com.id.clubvpn.filegear-sg.me"
+custom_domain = true
+
+[vars]
+# UUID = "2aeee1cd-954a-4f69-b2c0-2de59511707b"
+# PROXYIP = "138.2.104.102"
+# DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
+# NODE_ID = "1"
+# API_TOKEN = "example_dev_token"
+# API_HOST = "api.v2board.com"
+UUID = "2aeee1cd-954a-4f69-b2c0-2de59511707b"
+proxyip = "138.2.104.102"
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +100,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "f3c31bef-da4a-4309-aafe-ebf0e7812f0d"
