--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,24 @@
-name = "cf-worker-ws-dev" # todo
+name = "SGDO" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "sgdo.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "mssdk24-normal-useast2a.tiktokv.com.sgdo.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "zaintest.vuclip.com.sgdo.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cache.netflix.com.sgdo.clubvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "investors.spotify.com.sgdo.clubvpn.filegear-sg.me"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +27,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "f88b7c15-cb02-4bbd-85bb-7f39b98ffd4f"
