--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,7 @@ name = "sgdo" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg.muhno.my.id"
+pattern = "sgdo.muhno.my.id"
 custom_domain = true
 [[routes]]
 pattern = "shopee.co.id.sgdo.muhno.my.id"
