--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sgdo" # todo
+name = "bzir" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgdo.muhno.my.id"
+pattern = "bzir.muhnovip.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.sgdo.muhno.my.id"
+pattern = "shopee.co.id.bzir.muhnovip.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.sgdo.muhno.my.id"
+pattern = "quiz.staging.vidio.com.bzir.muhnovip.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sgdo.muhno.my.id"
+pattern = "ava.game.naver.com.bzir.muhnovip.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.sgdo.muhno.my.id"
+pattern = "cvs-deo.shopeemobile.com.bzir.muhnovip.my.id"
 custom_domain = true
 
 [vars]
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "57e64b0a-5382-4629-8936-8cbceee2dc06"
+UUID = "4a34acd0-0a1e-4843-8673-88e6cfe20d7d"
