--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sgdo" # todo
+name = "do" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgdo.muhno.my.id"
+pattern = "do.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.sgdo.muhno.my.id"
+pattern = "shopee.co.id.do.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sgdo.muhno.my.id"
+pattern = "cf.shopee.co.id.do.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sgdo.muhno.my.id"
+pattern = "ava.game.naver.com.do.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.sgdo.muhno.my.id"
+pattern = "quiz.staging.vidio.com.do.muhno.my.id"
 custom_domain = true
 
 [vars]
