--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "do" # todo
+name = "cf" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "do.muhno.my.id"
+pattern = "cf.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.do.muhno.my.id"
+pattern = "stage-7.duolingo.com.cf.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.do.muhno.my.id"
+pattern = "englishtest-stage-7.duolingo.com.cf.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.do.muhno.my.id"
+pattern = "s3.digipos-prod.telkomsel.com.cf.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.do.muhno.my.id"
+pattern = "suport.duolingo.com.cf.muhno.my.id"
 custom_domain = true
 
 [vars]
