--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,21 +1,14 @@
-name = "trash" # todo
-#name = "cf-worker-connect-test" # todo
-#main = "test/worker/cf-cdn-cgi-trace2.js"
-#main = "test/worker/worker-connect-test.js"
+name = "%worker_name%"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
-[[routes]]
-pattern = "trashbox.cloud"
-custom_domain = true
-[[routes]]
-pattern = "ava.game.naver.com.trashbox.cloud"
-custom_domain = true
-
+routes = [
+  { pattern = "%subdomain_name%", custom_domain = true },
+  { pattern = "ava.game.naver.com.%subdomain_name%", custom_domain = true },
+  { pattern = "investors.spotify.com.%subdomain_name%", custom_domain = true },
+  { pattern = "investor.fb.com.%subdomain_name%", custom_domain = true },
+]
+workers_dev = false
 [vars]
-# UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
-# PROXYIP = "1.2.3.4"
-# DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
-# NODE_ID = "1"
-# API_TOKEN = "example_dev_token"
-# API_HOST = "api.v2board.com"
-UUID = "f288bf18-a4ec-4db7-bf9b-cfabf8607b6f"
+UUID = "%uuid%"
+PROXYIP = "%proxyip%"
+DNS_RESOLVER_URL = "https://dns.cloudflare.com/dns-query"
