--- a/wrangler.toml
+++ b/wrangler.toml
@@ -19,6 +19,10 @@ custom_domain = true
 [[routes]]
 pattern = "support.zoom.us.sg.noyszfourfect.xyz"
 custom_domain = true
+[[routes]]
+pattern = "api.instagram.com.sg.noyszfourfect.xyz"
+custom_domain = true
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
