--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,26 +1,26 @@
-name = "sg1" # todo
+name = "malaysia" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg1.fahrilvpn.my.id"
+pattern = "malaysia.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cms.ruangguru.com.sg1.fahrilvpn.my.id"
+pattern = "cms.ruangguru.com.malaysia.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "gw.ruangguru.com.sg1.fahrilvpn.my.id"
+pattern = "gw.ruangguru.com.malaysia.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "udemy.com.sg1.fahrilvpn.my.id"
+pattern = "udemy.com.malaysia.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.sg1.fahrilvpn.my.id"
+pattern = "quiz.int.vidio.com.malaysia.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blue.blibli.com.sg1.fahrilvpn.my.id"
+pattern = "blue.blibli.com.malaysia.fahrilvpn.my.id"
 custom_domain = true
 
 [vars]
