--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,7 +17,7 @@ custom_domain = true
 pattern = "ava.game.naver.com.kr.noyszfourfect.xyz"
 custom_domain = true
 [[routes]]
-pattern = investors.spotify.com.kr.noyszfourfect.xyz
+pattern = "investors.spotify.com.kr.noyszfourfect.xyz"
 custom_domain = true
 
 [vars]
