--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "indog" # todo
+name = "tes" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -8,10 +8,16 @@ compatibility_date = "2023-05-26"
 pattern = "patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.indog.patunganvps.net"
+pattern = "ava.game.naver.com.tes.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.indog.patunganvps.net"
+pattern = "df.game.naver.com.tes.patunganvps.net"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.tes.patunganvps.net"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.tes.patunganvps.net"
 custom_domain = true
 
 [vars]
