--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,19 @@ name = "tes" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "patunganvps.net"
+pattern = "vpnpremium.cloud"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.tes.patunganvps.net"
+pattern = "ava.game.naver.com.tes.vpnpremium.cloud"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.tes.patunganvps.net"
+pattern = "df.game.naver.com.tes.vpnpremium.cloud"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.tes.patunganvps.net"
+pattern = "cvs-deo.shopeemobile.com.tes.vpnpremium.cloud"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.tes.patunganvps.net"
+pattern = "shopee.co.id.tes.vpnpremium.cloud"
 custom_domain = true
 
 [vars]
