--- a/wrangler.toml
+++ b/wrangler.toml
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "6d6a03ff-bad6-4e21-bfed-c1682ac13d6d, 0230b3ba-7315-4f0c-9b86-d424ed1f82aa"
+UUID = "6d6a03ff-bad6-4e21-bfed-c1682ac13d6d, 0230b3ba-7315-4f0c-9b86-d424ed1f82aa, e7b25a52-9273-4875-a94a-ce73e46f429f"
