--- a/wrangler.toml
+++ b/wrangler.toml
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "7266dbd9-b8d4-4c5f-9b42-9e36b44a4a41"
+UUID = "7266dbd9-b8d4-4c5f-9b42-9e36b44a4a41, afebd906-1c41-4146-9772-ccc4da1ba77e"
