--- a/wrangler.toml
+++ b/wrangler.toml
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "394ffc4e-1a4a-437b-9a7b-c70e03ec781a,97781dac-9446-4be7-934e-75b81129b065,4f488022-893f-4cc7-abaa-f4c1a45fc46b"
+UUID = "22da6422-e755-4401-9f60-b61fd39977ed"
